# pepper_compliance_controllers

./: .gitignore  CMakeLists.txt  selfcollision_service.launch
bolotnikova_controller/: CMakeLists.txt
bolotnikova_controller/etc/: BolotnikovaController.in.yaml
bolotnikova_controller/src/: BolotnikovaController.cpp  BolotnikovaController.h  CMakeLists.txt  MedianFilter.h  api.h
etc/: RandomGoalController.in.yaml
gravity_controller/etc/: GravityController.in.yaml
gravity_controller/src/: CMakeLists.txt  GravityController.cpp  GravityController.h  api.h
python_example_controller/: __init__.py  python_example_controller.py
python_example_controller/etc/: PythonExampleController.in.yaml
random_goal_controller/: CMakeLists.txt
random_goal_controller/src/: CMakeLists.txt  RandomGoalController.cpp  RandomGoalController.h
residual_learning_controller/: CMakeLists.txt
residual_learning_controller/etc/: ResidualLearningController.in.yaml
residual_learning_controller/src/: CMakeLists.txt  Model.hpp  ResidualLearningController.cpp  ResidualLearningController.h  api.h
src/: CMakeLists.txt  RandomGoalController.cpp  RandomGoalController.h  ResidualController.cpp  ResidualController.h  api.h
